--- a/app/assets/stylesheets/stickies.scss
+++ b/app/assets/stylesheets/stickies.scss
@@ -1,14 +1,13 @@
 html{
     height: 100vh;
     width: 100vw;
-    border: solid;
-    border-radius: 15px; 
     background-color: lemonchiffon;
+    background-size: 128px 128px;
     font-family: 'Quicksand', sans-serif;;
 }
 
 h1{
-    font-style: oblique;
+    
     color: gray;
     border: solid;
     border-radius: 15px
@@ -16,7 +15,7 @@ h1{
 
 .sticky{
     position: absolute;
-    background-color:lightgray;
+    background-color: gray;
     height: 200px;
     width: 200px;
     border-radius: 15px;
